fixed some spacing on footer

--- a/app/assets/stylesheets/custom_styles.scss.css
+++ b/app/assets/stylesheets/custom_styles.scss.css
@@ -408,7 +408,6 @@ input:hover#query { }
 .cfa-logos {
   float: right;
   display: block;
-  width: 420px;
   margin: 12px;
 }
 
